

2021-07-xx  2.10.0 [not yet released]
--------------------------------------------------------------------------------
IMP  #59    Inactivates process button if no compilation is possible.
FIX  #61    Fixes encoding tests in some environment by explicitly states encoding.
FIX  #58    Fixes crash with wrong Java version by bundling Java with the application.


2019-03-05  2.9.2
--------------------------------------------------------------------------------
FIX  #56    Continuous enumeration crashes on playlist repeating.


2018-11-15  2.9.1
--------------------------------------------------------------------------------
FIX  #50    Stale output directory yields error.
FIX  #51    OutOfMemoryError when adding long mp3 music file.
FIX  #53    NPE when playing extract (BPM dialog) while file is still importing.


2018-07-19  2.9.0
--------------------------------------------------------------------------------
ADD  #47    Reduce / adapt volume of break track.
FIX  #46    BPM dialog: Music should stop when dialog is closed.
FIX  #48    'Double whistle' special effect can be placed out of range.


2017-11-16  2.8.2
--------------------------------------------------------------------------------
IMP  #43    Add better debug output for compilation generation.
FIX  #41    System diagnosis string shows wrong hdd space.
FIX  #40    Sound effect start time not properly retrieved.
FIX  #42    NPE when leaving a field (e.g. sound period duration) empty.


2017-11-11  2.8.1
--------------------------------------------------------------------------------
IMP         Added more information to system diagnosis string.
IMP         Improved error tracking during compilation generation.
IMP  #31, #33 Reduced memory footprint of compilation.
IMP  #34    Added .deb package for Linux.
IMP  #36    Added command line switch ('-c') to clear user settings.
FIX  #37    Mitigated ConcurrentModificationException when generating music track cache.


2017-09-03  2.8.0