@@ -50,7 +50,7 @@ ui.form.music_list.list_mode.sort = Sortiert
 ui.form.music_list.list_mode.sort_rev = Rückw. Sortiert
 ui.form.music_list.list_mode.shuffle = Zufällig
 ui.form.music_list.list_mode.manual = Manuell
-ui.form.music_list.tooshort_error = Stück ist zu kurz für Intervalle
+ui.form.music_list.tooshort_error = Stück ev. zu kurz für Intervalle.
 ui.form.music_list.loading_text = Lade ...
 ui.form.music_list.queuing_text = In Warteschlange
 ui.form.break_list.label = Pausenmusik
