@@ -48,7 +48,7 @@ ui.form.music_list.list_mode.sort = Sort
 ui.form.music_list.list_mode.sort_rev = Reverse Sort
 ui.form.music_list.list_mode.shuffle = Shuffle
 ui.form.music_list.list_mode.manual = Manual
-ui.form.music_list.tooshort_error = Track is too short for chosen values!
+ui.form.music_list.tooshort_error = Track might be too short for chosen values.
 ui.form.music_list.loading_text = Loading ...
 ui.form.music_list.queuing_text = Waiting in queue
 ui.form.break_list.label = Break Track
